Create User and mongoDb data base
