# user-server/controllers/UserController.js
@@ -8,3 +8,16 @@ export function findByusername(req, res) {
     service.findByusername(req, res);
 }
 
+export function createUser(req, res) {
+    service.createUser(req, res);
+}
+
+export function createPageRankComputation(req, res) {
+    service.createPageRankComputation(req, res);
+}
+
+export function getFollowersRankingByComputationId(req, res) {
+    service.getFollowersRankingByComputationId(req, res);
+}
+
+
